--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 
 dependencies:
   carousel_slider: ^4.2.1
+  connectivity_plus: ^6.0.4
   dio: ^5.5.0+1
   equatable: ^2.0.5
   floor: ^1.5.0
