--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  fpdart: ^1.1.0
   freezed_annotation: ^2.4.4
   get_it: ^7.7.0
   injectable: ^2.4.4
